--- a/PContato0030282223028/PContato0030282223028/PContato0030282223028.csproj
+++ b/PContato0030282223028/PContato0030282223028/PContato0030282223028.csproj
@@ -47,6 +47,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Cidade.cs" />
+    <Compile Include="Contato.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
